# AIOgram_Template

./: .flake8  LICENSE  Makefile  README.md  alembic.ini  bot.ini  config.ini  pyproject.toml
bot/: app.py  config.py  loader.py
bot/db/: __init__.py  base.py  models.py  requests.py
bot/db/migrations/: env.py
bot/filters/: __init__.py  chat_type.py  chat_type_filter.py  role_check.py  role_check_filter.py
bot/handlers/: __init__.py  command_start.py  reset_state.py
bot/handlers/administrator/: __init__.py  administrator_panel.py  statistics.py
bot/handlers/basic/: __init__.py  reset_state.py  start.py
bot/handlers/control/: __init__.py  add_moderator.py  administrator.py  demote_moderator.py  get_moderators.py  mailing_list.py  moderator.py  panel.py  statistics.py
bot/handlers/moderator/: __init__.py  mailing_list.py  moderator_panel.py
bot/handlers/user/: __init__.py  top_up.py  user_panel.py
bot/keyboards/: static.py
bot/keyboards/administrator/: administrator_panel.py
bot/keyboards/basic/: __init__.py  reset_state.py
bot/keyboards/control/: __init__.py  control.py  mailing_list.py  moderators.py  panel.py
bot/keyboards/moderator/: moderator_panel.py
bot/keyboards/user/: user_panel.py
bot/middlewares/: __init__.py  anti_flood.py  anti_flood_middleware.py  registration.py  registration_middleware.py
bot/utils/: __init__.py  bot_commands.py  callback_data_factories.py  finite_state_machine.py
bot/utils/administrator/: callback_data_factories.py  finite_state_machine.py
bot/utils/moderator/: callback_data_factories.py  (+1 more)
(+5 files in other folders)
